issue solve for base url

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -10,7 +10,7 @@
         <div class="right-panel">
             <div class="right-panel-overlay">
                 <div class="right-side-button">
-                    <button class="btn"><img src="../../assets/images/download.png" alt=""></button>
+                    <button class="btn"><img src="./assets/images/download.png" alt=""></button>
                 </div>
                 <div class="inner" #mainbody>
                     <!-- afdasdfa we  -->
