--- a/src/app/navigation/left.panal.nav/left.panal.nav.component.html
+++ b/src/app/navigation/left.panal.nav/left.panal.nav.component.html
@@ -1,25 +1,25 @@
 
 <div class="left-panel-nav">
     <div class="nav-item" [routerLink]="['/cv-1']" >
-        <img src="../../../assets/images/cv-item/1.jpg" alt="nav-item-1">
+        <img src="./assets/images/cv-item/1.jpg" alt="nav-item-1">
     </div>
     <div class="nav-item" [routerLink]="['/cv-2']">
-        <img src="../../../assets/images/cv-item/1.jpg" alt="nav-item-1">
+        <img src="./assets/images/cv-item/1.jpg" alt="nav-item-1">
     </div>
-    <div class="nav-item" >
-        <img src="../../../assets/images/cv-item/1.jpg" alt="nav-item-1">
+    <div class="nav-item" [routerLink]="['/cv-2']">
+        <img src="./assets/images/cv-item/1.jpg" alt="nav-item-1">
     </div>
-    <div class="nav-item" >
-        <img src="../../../assets/images/cv-item/1.jpg" alt="nav-item-1">
+    <div class="nav-item" [routerLink]="['/cv-2']">
+        <img src="./assets/images/cv-item/1.jpg" alt="nav-item-1">
     </div>
-    <div class="nav-item" >
-        <img src="../../../assets/images/cv-item/1.jpg" alt="nav-item-1">
+    <div class="nav-item" [routerLink]="['/cv-2']">
+        <img src="./assets/images/cv-item/1.jpg" alt="nav-item-1">
     </div>
-    <div class="nav-item" >
-        <img src="../../../assets/images/cv-item/1.jpg" alt="nav-item-1">
+    <div class="nav-item" [routerLink]="['/cv-2']">
+        <img src="./assets/images/cv-item/1.jpg" alt="nav-item-1">
     </div>
-    <div class="nav-item" >
-        <img src="../../../assets/images/cv-item/1.jpg" alt="nav-item-1">
+    <div class="nav-item" [routerLink]="['/cv-2']">
+        <img src="./assets/images/cv-item/1.jpg" alt="nav-item-1">
     </div>
 </div>
 
