stop code of interceptor

--- a/src/app/user-input-forms/login-form/login-form.component.html
+++ b/src/app/user-input-forms/login-form/login-form.component.html
@@ -9,7 +9,7 @@
       </button>
      <div class="login-form-body">
       <div class="left-side">
-        <img src="../../../assets/images/login-image.png" alt="image">
+        <img src="./assets/images/login-image.png" alt="image">
       </div>
 
       <div class="right-side">
