--- a/src/app/user-input-forms/personal-details/personal-details.component.html
+++ b/src/app/user-input-forms/personal-details/personal-details.component.html
@@ -35,13 +35,13 @@
           <div class="input-group">
             <label >Gender:</label>
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="gender" id="gender" value="Male" formControlName="gender" >
+                <input class="form-check-input" type="radio" name="gender" value="Male" formControlName="gender" >
                 <label class="form-check-label" for="exampleRadios1">
                     Male
                 </label>
               </div>
               <div class="form-check">
-                <input class="form-check-input" type="radio" name="gender" id="gender" value="Female" formControlName="gender">
+                <input class="form-check-input" type="radio" name="gender" value="Female" formControlName="gender">
                 <label class="form-check-label" for="exampleRadios2">
                     Female
                 </label>
@@ -51,13 +51,13 @@
           <div class="input-group">
             <label >Marital Status:</label>
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="maritalStatus" id="maritalStatus" value="married" formControlName="maritalStatus" >
+                <input class="form-check-input" type="radio" name="maritalStatus" value="married" formControlName="maritalStatus" >
                 <label class="form-check-label" >
                   Married
                 </label>
               </div>
               <div class="form-check">
-                <input class="form-check-input" type="radio" name="maritalStatus" id="maritalStatus" value="unmarried" formControlName="maritalStatus">
+                <input class="form-check-input" type="radio" name="maritalStatus" value="unmarried" formControlName="maritalStatus">
                 <label class="form-check-label">
                   Unmarried
                 </label>
