--- a/src/app/page/cv-design1/cv-design1.component.html
+++ b/src/app/page/cv-design1/cv-design1.component.html
@@ -13,7 +13,7 @@
                     <button class="btn btn-sm edit-btn" *ngIf="isCvOnEditMode" (click)="openBasicInformationForm(basicInfoData)"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></button>
                 </td>
                 <td>
-                    <img width="100" height="100" src="https://majedesigns.com.au/wp-content/uploads/2017/08/profile-pic-200x200-final.jpg" alt="profile_image">
+                    <img width="100" height="100" src="./assets/images/profile-1.jpg" alt="profile_image">
                 </td>
             </tr>
             <!-- <tr>
@@ -25,25 +25,25 @@
 
 <table style="width: 100%; margin-bottom: 20px;">
     <tbody>
-     <tr>
-         <td style="padding-top: 0px;">            
-             <div style=" background: #dfdfdf; padding: 0px 0 2px 10px; margin: 20px 0 15px ; font-size: 14px; font-weight: bold;">
-                 <span>Objective</span>  <button *ngIf="isCvOnEditMode" class="btn btn-sm float-right edit-btn" (click)="onObjectiveCreateOrEdit()" ><i class="fa fa-pencil-square-o" aria-hidden="true"></i></button>
-             </div>           
-         </td>
-     </tr>            
-     <tr>
-         <td>  
-             
-            <span *ngIf="basicInfoData && basicInfoData.data.objective ">{{basicInfoData.data.objective}}</span>
-             <span *ngIf="!basicInfoData || !basicInfoData.data.objective" style="font-size: 14px;">Lorem Ipsum is simply dummy text of the printing and
-                 typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                 when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has 
-                 survived not only five centuries, but also the leap into electronic
-                 typesetting, remaining essentially unchanged. It was popularised </span>           
-         </td>
-     </tr>
-</tbody>
+        <tr>
+            <td style="padding-top: 0px;">            
+                <div style=" background: #dfdfdf; padding: 0px 0 2px 10px; margin: 20px 0 15px ; font-size: 14px; font-weight: bold;">
+                    <span>Objective</span>  <button *ngIf="isCvOnEditMode" class="btn btn-sm float-right edit-btn" (click)="onObjectiveCreateOrEdit()" ><i class="fa fa-pencil-square-o" aria-hidden="true"></i></button>
+                </div>           
+            </td>
+        </tr>            
+        <tr>
+            <td>  
+                
+                <span *ngIf="basicInfoData && basicInfoData.data.objective ">{{basicInfoData.data.objective}}</span>
+                <span *ngIf="!basicInfoData || !basicInfoData.data.objective" style="font-size: 14px;">Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                    when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has 
+                    survived not only five centuries, but also the leap into electronic
+                    typesetting, remaining essentially unchanged. It was popularised </span>           
+            </td>
+        </tr>
+    </tbody>
 </table>
 
 
